--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>adsense</title>
   </head>
-  <body></body>
+  <body>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4731933074639437"
+      crossorigin="anonymous"
+    ></script>
+    <!-- site-ads -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-4731933074639437"
+      data-ad-slot="7469203274"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </body>
 </html>
