--- a/index.html
+++ b/index.html
@@ -5,6 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>adsense</title>
+    <script>
+      let cookies = document.cookie
+        .split(";")
+        .reduce(
+          (ac, cv, i) =>
+            Object.assign(ac, { [cv.split("=")[0]]: cv.split("=")[1] }),
+          {}
+        );
+      if (cookies.hasOwnProperty("cookieyes-consent")) {
+        const cookieYesConsent = cookies["cookieyes-consent"];
+        if (cookieYesConsent) {
+          const cookiePairs = cookieYesConsent
+            .split(",")
+            .map((pair) => pair.trim());
+          const cookieObj = {};
+          cookiePairs.forEach((pair) => {
+            const [key, value] = pair.split(":");
+            cookieObj[key] = value;
+          });
+          if (cookieObj.analytics === "yes") {
+            // console.log("inside the cookieyes consent cookie");
+            // const adSense = document.createElement("script");
+            // adSense.src =
+            //   "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4731933074639437";
+            // adSense.crossorigin = "anonymous";
+            // adSense.async = true;
+
+            // document.head.appendChild(adSense);
+            const newElement = document.createElement("div");
+            newElement.style.background = "blue"; // Replace this with the actual path to your background image
+            newElement.style.width = "100px"; // Set the width (adjust as needed)
+            newElement.style.height = "100px";
+          } else {
+            console.log("in the events");
+            document.addEventListener(
+              "cookieyes_consent_update",
+              function (eventData) {
+                const data = eventData.detail;
+                if (data.accepted.includes("analytics")) {
+                  const newElement = document.createElement("div");
+                  newElement.style.background = "blue"; // Replace this with the actual path to your background image
+                  newElement.style.width = "100px"; // Set the width (adjust as needed)
+                  newElement.style.height = "100px";
+                }
+              }
+            );
+          }
+        }
+      }
+    </script>
+
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4731933074639437"
