--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             const [key, value] = pair.split(":");
             cookieObj[key] = value;
           });
-          if (cookieObj.analytics === "yes") {
+          if (cookieObj.analytics === "no") {
             // console.log("inside the cookieyes consent cookie");
             // const adSense = document.createElement("script");
             // adSense.src =
