--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             cookieObj[key] = value;
           });
           if (cookieObj.analytics === "yes") {
-            // console.log("inside the cookieyes consent cookie");
+            console.log("inside the cookieyes consent cookie");
             // const adSense = document.createElement("script");
             // adSense.src =
             //   "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4731933074639437";
@@ -40,7 +40,7 @@
             // adSense.async = true;
 
             // document.head.appendChild(adSense);
-            document.body.style.backgroundColor = "red";
+            body.style.backgroundColor = "red";
           } else {
             console.log("in the events");
             document.addEventListener(
