--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             // adSense.async = true;
 
             // document.head.appendChild(adSense);
-            body.style.backgroundColor = "red";
+            document.body.style.backgroundColor = "red";
           } else {
             console.log("in the events");
             document.addEventListener(
