--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             // adSense.async = true;
 
             // document.head.appendChild(adSense);
+            console.log(document.body);
             document.body.style.backgroundColor = "red";
           } else {
             console.log("in the events");
