added onload function

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             // adSense.async = true;
 
             // document.head.appendChild(adSense);
-            console.log(document.body);
-            document.body.style.backgroundColor = "red";
+            window.load = () => {
+              console.log(document.body);
+              document.body.style.backgroundColor = "red";
+            };
           } else {
             console.log("in the events");
             document.addEventListener(
